transpose and universal functions; ufunc

--- a/numpy.ipynb
+++ b/numpy.ipynb
@@ -847,8 +847,554 @@
    "source": [
     "---\n",
     "\n",
-    "# Transposing Arrays and Swapping Axes"
+    "# Transposing Arrays and Swapping Axes\n",
+    "\n",
+    "This returns a view of the underlying data without copying the source array"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# create a 3, 5 array\n",
+    "arr = np.arange(15).reshape((3, 5))\n",
+    "\n",
+    "arr"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# transpose it to a (5, 3) array\n",
+    "\n",
+    "arr_T = arr.T # or arr.transpose()\n",
+    "\n",
+    "arr_T"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# we modify the transposed array and confirm that the source array is also modified\n",
+    "# thus indicating that the transposed array is a view\n",
+    "\n",
+    "arr_T[2] = 1000\n",
+    "\n",
+    "print('modified arr_T')\n",
+    "print(arr_T)\n",
+    "\n",
+    "print(\"source array:\")\n",
+    "print(arr)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Matrix multiplication and the Transpose of an ndarray\n",
+    "\n",
+    "> To mutiply two matrix, the num of columns of the first must match the num of rows of the second. Hence to multiply a non-square matrix (m x n; where m!=n) by itself, then we have to multiply it with a transpose of itself\n",
+    "\n",
+    "Note that this is otherwise \n",
+    "> [!NOTE]\n",
+    "> Multiplication of two matrix, not element wise, is done using the [dot] method\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "arr = np.random.randn(10, 5)\n",
+    "arr"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "arr_mul = np.dot(arr.T, arr)\n",
+    "arr_mul"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Transpose and Higher Dimensional Array\n",
+    "\n",
+    "This is similar to re-ordering the axes of the higher dimensional array"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "arr = np.arange(16).reshape((2, 2, 4))\n",
+    "\n",
+    "arr"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# make the second(1) axis first, first(0) axis second, and the third axis unchannged \n",
+    "arr.transpose((1, 0, 2))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "# Array Functions\n",
+    "\n",
+    "A universal array function (ufunc), is any function that performs element-wise operations on the ndarrays, and returns a scalar or array of scalar values as its result\n",
+    "\n",
+    "- Unary Unfunc\n",
+    "\t- sqrt, exp\n",
+    "\n",
+    "- binary ufuncs\n",
+    "\t- add,\n",
+    "\n",
+    "- n-aryy ufuncs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "arr1d = np.arange(4, 20)\n",
+    "arr1d"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# square root of element\n",
+    "np.sqrt(arr1d)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "arr2d = np.arange(16).reshape((4, 4))\n",
+    "arr2d"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# square of the 2d elements \n",
+    "\n",
+    "np.sqrt(arr2d)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# as exponential of e\n",
+    "print(\"e^(each array element): \")\n",
+    "np.exp(arr2d)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "arr2d"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# broadcasting\n",
+    "arr2d + 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# vectorization\n",
+    "arr2d + arr2d"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.add(arr2d, arr2d)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(arr1d)\n",
+    "print()\n",
+    "print(arr2d)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "arr1d_rshp = arr1d.reshape((4, 4))\n",
+    "arr1d_rshp"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.maximum(arr2d.T, arr1d_rshp)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 164,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# modf array\n",
+    "remainder, whole = np.modf(arr2d, arr1d_rshp.astype('float64'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 162,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0., 0., 0., 0.],\n",
+       "       [0., 0., 0., 0.],\n",
+       "       [0., 0., 0., 0.],\n",
+       "       [0., 0., 0., 0.]])"
+      ]
+     },
+     "execution_count": 162,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "remainder"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 166,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 0.,  1.,  2.,  3.],\n",
+       "       [ 4.,  5.,  6.,  7.],\n",
+       "       [ 8.,  9., 10., 11.],\n",
+       "       [12., 13., 14., 15.]])"
+      ]
+     },
+     "execution_count": 166,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "whole"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## !NOTE\n",
+    "\n",
+    "> ufunc, can accept an optional argument that tells them where to  put the result of the computation, but the optional argument array must;\n",
+    "\n",
+    "-  be the same order as the first argument, \n",
+    "-  have the same type as the result of the computation."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 183,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "# create two array of the same size\n",
+    "arr1 = np.arange(1, 13)\n",
+    "arr2 = np.arange(30 ,42).astype('float64')\n",
+    "print(arr1.size == arr2.size)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 184,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 1,  2,  3,  4,  5,  6,  7,  8,  9, 10, 11, 12])"
+      ]
+     },
+     "execution_count": 184,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arr1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 185,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([30., 31., 32., 33., 34., 35., 36., 37., 38., 39., 40., 41.])"
+      ]
+     },
+     "execution_count": 185,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arr2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 186,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1.        , 1.41421356, 1.73205081, 2.        , 2.23606798,\n",
+       "       2.44948974, 2.64575131, 2.82842712, 3.        , 3.16227766,\n",
+       "       3.31662479, 3.46410162])"
+      ]
+     },
+     "execution_count": 186,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# take the sqrt of arr1 and store the result in arr2\n",
+    "\n",
+    "# because arr2 is not the same type as the result of taking the sqrt on arr1\n",
+    "# we must change its type, so that it can store the result of the computation (float64)\n",
+    "\n",
+    "# the previous statement isn't totally true. I used the astype for the conversion, and it turns out that the method returns a copy and doesn't modify the array in-place\n",
+    "# so i had to add the type from its initialisation for this to work\n",
+    "np.sqrt(arr1, arr2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 187,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1.        , 1.41421356, 1.73205081, 2.        , 2.23606798,\n",
+       "       2.44948974, 2.64575131, 2.82842712, 3.        , 3.16227766,\n",
+       "       3.31662479, 3.46410162])"
+      ]
+     },
+     "execution_count": 187,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# check the elements of arr2 and see that it has been modified\n",
+    "arr2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 189,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 1,  2,  3,  4,  5,  6,  7,  8,  9, 10, 11, 12])"
+      ]
+     },
+     "execution_count": 189,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# array remains the same\n",
+    "arr1\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 194,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1.        , 1.18920712, 1.31607401, 1.41421356, 1.49534878,\n",
+       "       1.56508458, 1.62657656, 1.68179283, 1.73205081, 1.77827941,\n",
+       "       1.82116029, 1.86120972])"
+      ]
+     },
+     "execution_count": 194,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# pass arr1 as the second argument\n",
+    "\n",
+    "# notice how we had to change the type of the array in memory\n",
+    "arr1 = arr1.astype('float64')\n",
+    "np.sqrt(arr1, arr1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 195,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1.        , 1.18920712, 1.31607401, 1.41421356, 1.49534878,\n",
+       "       1.56508458, 1.62657656, 1.68179283, 1.73205081, 1.77827941,\n",
+       "       1.82116029, 1.86120972])"
+      ]
+     },
+     "execution_count": 195,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arr1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 196,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([20, 21, 22, 23, 24, 25])"
+      ]
+     },
+     "execution_count": 196,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arr = np.arange(20, 26)\n",
+    "arr"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 198,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([3.04452244, 3.09104245, 3.13549422, 3.17805383, 3.21887582,\n",
+       "       3.25809654])"
+      ]
+     },
+     "execution_count": 198,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#3 return the logarithm to base e, by adding one to all the element before performing the logarithmic computation\n",
+    "np.log1p(arr)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
