creating, swapping, transpose, values, inserting

--- a/numpy/pandas.ipynb
+++ b/numpy/pandas.ipynb
@@ -683,221 +683,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>geographic_region</th>\n",
-       "      <th>states</th>\n",
-       "      <th>capital</th>\n",
-       "      <th>population</th>\n",
-       "      <th>Visited</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>one</th>\n",
-       "      <td>SW</td>\n",
-       "      <td>lagos</td>\n",
-       "      <td>ikeja</td>\n",
-       "      <td>6</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>two</th>\n",
-       "      <td>NC</td>\n",
-       "      <td>fct</td>\n",
-       "      <td>abuja</td>\n",
-       "      <td>5</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>three</th>\n",
-       "      <td>SW</td>\n",
-       "      <td>ondo</td>\n",
-       "      <td>akure</td>\n",
-       "      <td>4</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>four</th>\n",
-       "      <td>SW</td>\n",
-       "      <td>oyo</td>\n",
-       "      <td>ibadan</td>\n",
-       "      <td>3</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>five</th>\n",
-       "      <td>SS</td>\n",
-       "      <td>plateau</td>\n",
-       "      <td>jos</td>\n",
-       "      <td>2</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "      geographic_region   states capital  population  Visited\n",
-       "one                  SW    lagos   ikeja           6      NaN\n",
-       "two                  NC      fct   abuja           5      NaN\n",
-       "three                SW     ondo   akure           4      NaN\n",
-       "four                 SW      oyo  ibadan           3      NaN\n",
-       "five                 SS  plateau     jos           2      NaN"
-      ]
-     },
-     "execution_count": 140,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "df"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 142,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# delete the geographic_region column\n",
     "\n",
-    "del df['geographic_region']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 145,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Index(['states', 'capital', 'population', 'Visited'], dtype='object')"
-      ]
-     },
-     "execution_count": 145,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# the column is deleted\n",
-    "df.columns"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 146,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>states</th>\n",
-       "      <th>capital</th>\n",
-       "      <th>population</th>\n",
-       "      <th>Visited</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>one</th>\n",
-       "      <td>lagos</td>\n",
-       "      <td>ikeja</td>\n",
-       "      <td>6</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>two</th>\n",
-       "      <td>fct</td>\n",
-       "      <td>abuja</td>\n",
-       "      <td>5</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>three</th>\n",
-       "      <td>ondo</td>\n",
-       "      <td>akure</td>\n",
-       "      <td>4</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>four</th>\n",
-       "      <td>oyo</td>\n",
-       "      <td>ibadan</td>\n",
-       "      <td>3</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>five</th>\n",
-       "      <td>plateau</td>\n",
-       "      <td>jos</td>\n",
-       "      <td>2</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "        states capital  population  Visited\n",
-       "one      lagos   ikeja           6      NaN\n",
-       "two        fct   abuja           5      NaN\n",
-       "three     ondo   akure           4      NaN\n",
-       "four       oyo  ibadan           3      NaN\n",
-       "five   plateau     jos           2      NaN"
-      ]
-     },
-     "execution_count": 146,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# the column is not the data frame \n",
-    "df"
+    "---||| \n",
+    "\n",
+    "#### Swapping Columns and Rows with transpose\n",
+    "\n",
+    "Using the **transpose function** or **T attribute** will:\n",
+    "\n",
+    "- swap rows to columns\n",
+    "- columns to rows"
    ]
   },
   {
@@ -905,14 +710,104 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df.T"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df.transpose()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "---|||\n",
+    "\n",
+    "### Creating a new Dataframe from an existing Dataframe\n",
+    "\n",
+    "By using an existing dataframe object, one can create a new dataframe.\n",
+    "\n",
+    "if the index key is specified then\n",
+    "\n",
+    "- any index of the previous dataframe added to this new index, will have its column data in the new data frame\n",
+    "\n",
+    "- new index will automatically be assigned nan"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# we only want the data in 'one, five and three' in the new dataframe\n",
+    "# the new index added, 'ten, nine' will be assigned nan in the respective data columns\n",
+    "df2 = pd.DataFrame(df, index=['one', 'ten', 'five', 'nine', 'three'])\n",
+    "\n",
+    "df2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# set the name attributes of the index and column of a dataframe\n",
+    "\n",
+    "df2.columns.name = 'States in Nigeria Info'\n",
+    "df2.index.name = \"Numbering\"\n",
+    "\n",
+    "df2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 183,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([['lagos', 'ikeja', 6, 'yes'],\n",
+       "       ['fct', 'abuja', 5, 'no'],\n",
+       "       ['ondo', 'akure', 4, 'yes'],\n",
+       "       ['oyo', 'ibadan', 3, 'yes'],\n",
+       "       ['plateau', 'jos', 2, nan]], dtype=object)"
+      ]
+     },
+     "execution_count": 183,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# return the values in a dataframe\n",
+    "# the data are returned along the columns axis\n",
+    "df.values"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "---|||\n",
+    "\n",
+    "### Index Object\n",
+    "\n",
+    "This is a pandas object that holds the info of a dataframe's columns or index AND a series index\n",
+    "\n",
+    "- It is immutable \n",
+    "- it can be shared among other data structures"
+   ]
   },
   {
    "cell_type": "code",
